# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4


SUBDIRS = src
AM_CXXFLAGS = -I. -O2 -DSOCKLEN_T=socklen_t -D_LARGEFILE_SOURCE=1 -Wall -DBSD=1
INCLUDES = -I/usr/include/Inventor/Qt -I/usr/share/qt3/include\
	-I/usr/include/qt3
